--- a/src/app/Components/profile/user-list.component.html
+++ b/src/app/Components/profile/user-list.component.html
@@ -1,7 +1,7 @@
 <nav class="nav-extended">
   <div class="nav-content">
     <div class="nav-div">
-      <img class="circle responsive-img" src="https://material.angular.io/assets/img/examples/shiba1.jpg" />
+      <img class="circle responsive-img" src="assets/Images/profile.png" alt="profile icon" />
     </div>
     <h1 class="profile-name">{{firstName}} {{lastName}}</h1>
     <p class="user-text">Helllo there peps...</p>
